# workshop-poetry

./: pyproject.toml
workshop_poetry/: main.py
